Added password/encryptor arguments to XmlConfigurator and XmlModuleInitializers